<resources>
    <string name="app_name">TesDanaMon</string>
    <string name="title_buildsrc">Module Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="list_user">List User</string>
    <string name="id">ID:</string>
    <string name="username_title">Username:</string>
    <string name="email_title">Email:</string>
    <string name="role">Role:</string>
    <string name="error_login">Eror Login</string>
    <string name="error_register">Eror Register</string>
    <string name="error_empty">Field cannot be empty</string>
    <string name="data_not_found">Data not found</string>
    <string name="loading">Loading . . .</string>
    <string name="edit_user">Edit User</string>
    <string name="save_data">Save Data</string>
    <string name="delete_confirmation_title">Are you sure detele this data?</string>
    <string name="delete_confirmation_message">input your password</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="password_not_match">password not match</string>
    <string name="password_empty">input password</string>
    <string name="websocket_message">Websocket Message Here!\\n</string>
</resources>